--- a/workflow/envs/deeptools.yaml
+++ b/workflow/envs/deeptools.yaml
@@ -11,5 +11,5 @@ dependencies:
   - pandas=2.0.0
   - seaborn=0.12.2
   - numpy=1.23.5
-  - ucsc-bigwigmerge=377
-  - ucsc-bedgraphtobigwig=445
+  - wiggletools=1.2.11
+  - ucsc-wigtobigwig=447
