--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -6,13 +6,22 @@ from snakemake.utils import min_version, validate
 from snakemake.logging import logger
 from scripts.resources import Resources
 
+# Workflow version
+VERSION = "v0.3.0"
+
 # Set minimum snakemake version
-min_version("7.25.0")
+min_version("8.12.0")
 
 report: "report/workflow.rst"
 
 # Wrapper version
-wrapper_version = "v3.8.0"
+wrapper_version = "v3.10.2"
+
+logger.info(f"Workflow version: {VERSION}")
+logger.info(f"Wrapper version: {wrapper_version}")
+
+# Define Docker container for Apptainer usage
+containerized: f"docker://niekwit/chip-seq:{VERSION}"
 
 # Load config file
 configfile: "config/config.yml"
