--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -5,12 +5,13 @@ import datetime
 from snakemake.utils import min_version, validate
 from snakemake.logging import logger
 from scripts.resources import Resources
+include: "scripts/general_functions.smk"
 
 # Workflow version
-VERSION = "v0.3.0"
+VERSION = "v0.5.0"
 
 # Set minimum snakemake version
-min_version("8.12.0")
+min_version("8.13.0")
 
 report: "report/workflow.rst"
 
@@ -32,10 +33,10 @@ regions = config["peak_calling"]["macs2"]["regions"]
 
 # Load genome resources to be used in rules
 resources = Resources(config["genome"], config["ensembl_genome_build"])
+if config["spike_in"]["apply"]:
+    si_resources = Resources(config["spike_in"]["genome"], config["spike_in"]["ensembl_genome_build"])
 fasta = resources.fasta
 genome = resources.genome
-
-include: "scripts/general_functions.smk"
 
 # Get sample names
 SAMPLES = samples()
@@ -50,9 +51,9 @@ include: "rules/qc.smk"
 include: "rules/plotting.smk"
 include: "rules/trim.smk"
 include: "rules/align.smk"
+include: "rules/peaks.smk"
 include: "rules/deeptools.smk"
 include: "rules/bigwig.smk"
-include: "rules/peaks.smk"
 
 # Target rule
 rule all:
